--- a/Confeitaria/composer.json
+++ b/Confeitaria/composer.json
@@ -2,7 +2,7 @@
 { 
     "type": "project",
     "scripts": {
-        "test": "phpunit --colors --testsuite unit"
+        "test": "phpunit --colors --testsuite unit --testdox"
     },
     "require": {
         "php": "8.2.12"
@@ -13,12 +13,12 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src\\"
+            "App\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests\\"
+            "Tests\\": "tests/"
         }
     }
 
